--- a/Frontend/Cantine/src/app/student/profile/profile.component.html
+++ b/Frontend/Cantine/src/app/student/profile/profile.component.html
@@ -1,1 +1,17 @@
-<p>profile works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12  test">
+            <h1>404</h1>
+            <p>Page not found</p>
+        </div>
+    </div>
+
+</div>
+
+
+<style>
+    .test {
+      border: 1px solid #000;
+    }
+
+</style>
