--- a/Frontend/Cantine/src/assets/styles/main.component.scss
+++ b/Frontend/Cantine/src/assets/styles/main.component.scss
@@ -15,8 +15,9 @@ mat-toolbar{
     display: none;
   }
   img{
-    width: 50px;
+    width: 60px;
     cursor: pointer;
+    border-radius:50% ;
   }
    //z-index: 100;
 }
