--- a/Frontend/Cantine/src/app/student/profile/profile.component.html
+++ b/Frontend/Cantine/src/app/student/profile/profile.component.html
@@ -1,11 +1,28 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-12  test">
-            <h1>404</h1>
-            <p>Page not found</p>
-        </div>
-    </div>
+            <form [formGroup]="studentUpdated">
+                <!---------------------- Email --------------------------->
+                <div class="form-group ">
+                    <label for="email"> Email : </label>
+                    <input [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" class="form-control"
+                           formControlName="email"
+                           placeholder="  Votre Email "
+                           type="email"
+                           id="email"
+                    />
+                    <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
+                        <div *ngIf="f['email'].errors['required']" class="center"> Votre Email est requis</div>
+                        <div *ngIf="f['email'].errors['maxlength']" class="center">
+                            votre Nom ne doit pas dépasser 1000 charctéres
+                        </div>
+                        <div *ngIf="(f['email'].errors['email'] )  ||  (f['email'].errors['pattern'])" class="center">
+                            Le Format de Email est incorrecte
+                        </div>
+                    </div>
+                </div>
 
+            </form>
+    </div>
 </div>
 
 
