update  profile  component

--- a/Frontend/Cantine/src/app/student/profile/profile.component.html
+++ b/Frontend/Cantine/src/app/student/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-            <form [formGroup]="studentUpdated">
+            <form [formGroup]="studentUpdated" class="test">
                 <!---------------------- Email --------------------------->
                 <div class="form-group ">
                     <label for="email"> Email : </label>
@@ -28,7 +28,7 @@
 
 <style>
     .test {
-      border: 1px solid #000;
+      border: 1px solid red;
     }
 
 </style>
