make  a  template for  student  profile

--- a/Frontend/Cantine/src/app/student/dashbord/sign-up/sign-up.component.html
+++ b/Frontend/Cantine/src/app/student/dashbord/sign-up/sign-up.component.html
@@ -36,7 +36,7 @@
 
 
 
-                    <!---------------------- Name --------------------------->
+                    <!---------------------- LastName --------------------------->
                     <div class="form-group ">
                         <label for="lastName"> Nom :  </label>
                         <input [ngClass]="{ 'is-invalid': submitted && f['lastName'].errors }" class="form-control"
@@ -206,7 +206,7 @@
 
 
 
-                    <!---------------------- Function  --------------------------->
+                    <!---------------------- StudentClass  --------------------------->
 
                     <div class="form-group">
                         <label for="studentClass">    </label>
