change  the profile component  to  dashbord

--- a/Frontend/Cantine/src/app/student/dashbord/profile/profile.component.html
+++ b/Frontend/Cantine/src/app/student/dashbord/profile/profile.component.html
@@ -182,9 +182,12 @@
                 Annuler
             </div>
 
-
         </div>
     </div>
+</div>
+
+<div class="btn">
+       changer le mot  de passe
 </div>
 
 
@@ -194,7 +197,7 @@
     #profile-picture {
         width: 20%;
         height: auto;
-        border-radius: 50%;
+        border-radius: 100%;
     }
 
 
