--- a/Frontend/Cantine/src/app/student/dashbord/profile/profile.component.html
+++ b/Frontend/Cantine/src/app/student/dashbord/profile/profile.component.html
@@ -61,7 +61,7 @@
                        id="email"
 
                 />
-                <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
+           <!--     <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
                     <div *ngIf="f['email'].errors['required']" class="center"> Votre Email est requis</div>
                     <div *ngIf="f['email'].errors['maxlength']" class="center">
                         votre Nom ne doit pas dépasser 1000 charctéres
@@ -69,7 +69,7 @@
                     <div *ngIf="(f['email'].errors['email'] )  ||  (f['email'].errors['pattern'])" class="center">
                         Le Format de Email est incorrecte
                     </div>
-                </div>
+                </div>-->
             </div>
 
 
@@ -171,11 +171,11 @@
         </form>
 
 
-        <div class=" center btn">
+        <div class=" center btn"  *ngIf="!isLoading ; else loadingTemplate">
             <div class="update-btn">
                 <mat-icon>done_outline</mat-icon>
                 <span *ngIf="!touched" (click)="modify()"> Modifier</span>
-                <span *ngIf="touched" (click)="onSubmit()">  Valider </span>
+                <span *ngIf="touched" (click)="onSubmit()">   Valider </span>
             </div>
 
             <div class="reset btn " (click)="cancel()">
@@ -219,4 +219,20 @@
     }
 
 
+</style>
+
+<ng-template #loadingTemplate >
+    <div class="spinner-container">
+        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+    </div>
+
+</ng-template>
+
+<style>
+    .spinner-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 15vh;
+    }
 </style>
