update  add  meals   to  order

--- a/Frontend/Cantine/src/app/core-cantine/meals/meals.componenet.html
+++ b/Frontend/Cantine/src/app/core-cantine/meals/meals.componenet.html
@@ -25,7 +25,7 @@
                                  </div>
                              </div>
                             <div>
-                                <button class="btn"  (click)="addToOrder()"> Ajouter Le Plat </button>
+                                <button class="btn"  (click)="addToOrder(meal.id)"> Ajouter Le Plat </button>
                             </div>
                       </div>
                  </div>
@@ -38,3 +38,4 @@
             <mat-icon>arrow_back</mat-icon> retour
         </div>
 
+    </div>
