--- a/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
@@ -65,7 +65,7 @@
             <span>Profile</span>
         </button>
 
-        <button class="menu-button" mat-button>
+        <button class="menu-button"  (click)="goToOrders()"  mat-button>
             <mat-icon>shopping_cart</mat-icon>
             <span>Mon Panier </span>
             <mat-icon class="badge" matBadge="10" matBadgeColor="warn" matBadgePosition="above after"></mat-icon>
