--- a/Frontend/Cantine/src/app/core-cantine/meals/meals.componenet.html
+++ b/Frontend/Cantine/src/app/core-cantine/meals/meals.componenet.html
@@ -25,7 +25,7 @@
                                  </div>
                              </div>
                             <div>
-                                <button class="btn"  (click)="addToOrder(meal.id)"> Ajouter Le Plat </button>
+                                <button class="btn"  (click)="addToOrder(meal)"> Ajouter Le Plat </button>
                             </div>
                       </div>
                  </div>
