add  component  dialogue  to  update  student  order

--- a/Frontend/Cantine/src/app/student/order/order-dashbord/order-dashboard.component.html
+++ b/Frontend/Cantine/src/app/student/order/order-dashbord/order-dashboard.component.html
@@ -16,7 +16,7 @@
             <span><strong>Prix total : </strong> {{getTotalPrice()}} € </span>
         </div>
         <div class="col-md-2">
-            <button class="btn btn-primary">Modifier</button>
+            <button class="btn btn-primary"  (click)="modifyOrder()">Modifier</button>
         </div>
         <div class="col-md-2">
             <button class="btn btn-success">Valider</button>
