--- a/Frontend/Cantine/src/app/student/order/order-dashbord/modify-order-dialogue/modify-order-dialogue.component.html
+++ b/Frontend/Cantine/src/app/student/order/order-dashbord/modify-order-dialogue/modify-order-dialogue.component.html
@@ -1,6 +1,34 @@
+<div class="container">
+      <div class="row">
+                <h2> Ma  commande  :  </h2>
 
+                 <p class="title"> Les Menus  </p>
+            <div *ngFor="let menu of order.menus">
+                <p>{{menu.label}}</p>
+                <p>{{menu.price}}</p>
+                <div class="btn  center">  supprimer le  Menu  </div>
+            </div>
 
+          <p  class="title" > Les plats   </p>
+          <div *ngFor="let meal of order.meals" class="meal">
+               <p>{{meal.label}}</p>
+              <p>{{meal.price}}</p>
+              <p>{{meal.category}}</p>
+              <div class="btn center ">  supprimer  le plat  </div>
+          </div>
+             <div class="btn">  supprimer La commande  </div>
+      </div>
+</div>
 
-<h1>
-       hello world
-</h1>
+<style>
+    .container{
+        border: 1px solid #000;
+    }
+    .title{
+        color: red;
+    }
+
+    .meal{
+        border: 1px solid #000;
+    }
+</style>
