add  remove  meal  from  Order  function

--- a/Frontend/Cantine/src/app/core-cantine/menu/menu.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/menu/menu.component.html
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                     <div>
-                        <button class="btn" (click)="addToOrder()"> Ajouter Le Menu </button>
+                        <button class="btn" (click)="addToOrder(menu)"> Ajouter Le Menu </button>
                     </div>
                 </div>
             </div>
