make add  Order  Service

--- a/Frontend/Cantine/src/app/student/order/order-dashbord/order-dashboard.component.html
+++ b/Frontend/Cantine/src/app/student/order/order-dashbord/order-dashboard.component.html
@@ -19,7 +19,7 @@
             <button class="btn btn-primary"  (click)="modifyOrder()">Modifier</button>
         </div>
         <div class="col-md-2">
-            <button class="btn btn-success">Valider</button>
+            <button class="btn btn-success" (click)="sendOrder()">Valider</button>
         </div>
     </div>
 </div>
