add Validate  Order  Function

--- a/Frontend/Cantine/src/app/student/dashbord/profile/profile.component.html
+++ b/Frontend/Cantine/src/app/student/dashbord/profile/profile.component.html
@@ -6,7 +6,7 @@
             <div class="wallet center">
                 <img id="profile-picture" src={{user.image}}>
                 <h1>{{user.firstname}}   {{user.lastname}}</h1>
-                <h2> MON SOLDE : 120.04 € </h2>
+                <h2> MON SOLDE : {{user.wallet}} € </h2>
             </div>
 
             <!---------------------- Name --------------------------->
