get  current  orders

--- a/Frontend/Cantine/src/app/student/order/order-dashbord/modify-order-dialogue/modify-order-dialogue.component.html
+++ b/Frontend/Cantine/src/app/student/order/order-dashbord/modify-order-dialogue/modify-order-dialogue.component.html
@@ -16,7 +16,7 @@
               <p>{{meal.category}}</p>
               <div class="btn center" (click)="removeMealFromOrder(meal)">  supprimer  le plat  </div>
           </div>
-             <div class="btn">  supprimer La commande  </div>
+             <div class="btn" (click)="removeOrder()">  supprimer La commande  </div>
       </div>
 </div>
 
