--- a/Frontend/Cantine/src/app/student/order/order-dashbord/order-dashboard.component.html
+++ b/Frontend/Cantine/src/app/student/order/order-dashbord/order-dashboard.component.html
@@ -29,11 +29,31 @@
     </div>
 </div>
 
+<div class="container">
+    <div class="row">
+        <div  class="trait"></div>
+        <div  class="center">
+             <h2> Commande Déja Valider </h2>
+        </div>
+
+</div>
+</div>
+
+
+
 
 <style>
+
+    .trait {
+        width: 50%;
+        height: 2px;
+        background: black;
+        margin-bottom: 50px;
+        transform: translate(50%, 0);
+    }
     .test{
         margin-top: 20px;
-        margin-bottom: 20px;
+       margin-bottom: 10%;
        border: 1px solid #ccc;
         padding: 10px;
         border-radius: 5px;
